--- a/vue3/alarm_multiple/index.html
+++ b/vue3/alarm_multiple/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alarm</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <script src="https://unpkg.com/vue@next"></script>
 </head>
 <body>
     <div id="components-demo">
-        <alarm-component></alarm-component>
+        <alarm-manager-component></alarm-manager-component>
     </div>
     <script src="app.js"></script>
 </body>
