--- a/vue3/nested-components/index.html
+++ b/vue3/nested-components/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alarm</title>
+    <title>Components</title>
     <script src="https://unpkg.com/vue@next"></script>
 </head>
+
 <body>
-    <div id="components-demo">
-        <alarm-component></alarm-component>
+    <div id="todo-list-app">
+        <ol>
+            <todo-item
+                v-for="item in groceryList"
+                v-bind:todo="item"
+                v-bind:key="item.id"></todo-item>
+        </ol>
     </div>
+
     <script src="app.js"></script>
 </body>
+
 </html>
